@@ -61,3 +61,4 @@ DATE		HOUR	AUTHOR			DESCRIPTION
 27/05/2025	11:20	Daniele Chiarion	Add .js code for the admin to add car.
 27/05/2025	20:04	Daniele Chiarion	Completed .js code to add items for the admin.
 27/05/2025	20:59	Daniele Chiarion	Completed .js code to get the correct carousel starting from the device size.
+28/05/2025	08:53	Daniele Chiarion	Add backed part with methods to show cars in the home page based on the user preferences.
